# scanned-image-extractor

./: .gitignore  CHANGELOG  README  README.md  WARRANTY  flake.nix
.github/workflows/: AppImage.yaml
CMakeModules/: Findliblbfgs.cmake  Findmisc.cmake  Findversioning.cmake  NewIfNotExists.cmake  addtranslation.cmake  buildPackage.cmake  installDesktop.cmake  installQt5.cmake  onTheFlyResourceFile.cmake  qt5.cmake  settings.cmake
doc/: scannerExtract.css  scannerExtract_help_de.html  scannerExtract_help_en.html
module_misc/: CMakeLists.txt  filenamenumbering_pre.cpp  filenamenumbering_pre.h  translation.cpp  translation.h  version_module_misc.cpp  version_module_misc.h
module_versioning/: versioning.h
scannerExtract/: CMakeLists.txt  TargetImage.cpp  TargetImage.h  WARRANTY_DE  about.cpp  about.h  about.ui  copytargets.cpp  copytargets.h  extracttargets.cpp  extracttargets.h  helpdialog.cpp  helpdialog.ui  imageboundary.cpp  imageboundary.h  imagescene.cpp  imagescene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pQPixmap.h  preloadsource.cpp  preloadsource.h  scannerIcons.qrc  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  sourcefile.cpp  sourcefile.h  trans_scannedImageExtractor_de.ts  translations  version_scannerExtract.cpp  version_scannerExtract.h
